WIP all untunned models

--- a/titanic-problem.ipynb
+++ b/titanic-problem.ipynb
@@ -423,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of rows left 891\n"
+      "Total number of rows left 712\n"
      ]
     },
     {
@@ -533,30 +533,30 @@
        "4         0       3    male  35.0      0      0   8.0500        S"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Dropping all rows with any NA value with dropna\n",
-    "features = ds.dropna()\n",
+    "ds = ds.dropna()\n",
     "print \"Total number of rows left\",len(ds.index)\n",
     "ds.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(891, 8)"
+       "(712, 8)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,214 +567,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Pclass     Sex   Age  SibSp  Parch     Fare Embarked\n",
-       "0       3    male  22.0      1      0   7.2500        S\n",
-       "1       1  female  38.0      1      0  71.2833        C\n",
-       "2       3  female  26.0      0      0   7.9250        S\n",
-       "3       1  female  35.0      1      0  53.1000        S\n",
-       "4       3    male  35.0      0      0   8.0500        S"
+       "Pclass        int64\n",
+       "Sex           int64\n",
+       "Age         float64\n",
+       "SibSp         int64\n",
+       "Parch         int64\n",
+       "Fare        float64\n",
+       "Embarked      int64\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lables = ds['Survived']\n",
+    "labels = ds['Survived']\n",
     "features = ds.drop('Survived',1)\n",
-    "features.head()"
+    "#features['Sex'] = features['Sex'].astype('category')\n",
+    "#features['Embarked'] = features['Embarked'].astype('category')\n",
+    "from sklearn import preprocessing\n",
+    "le = preprocessing.LabelEncoder()\n",
+    "le1 = le.fit([\"male\",\"female\"])\n",
+    "features['Sex'] = le1.transform(features['Sex'])\n",
+    "le2 = le.fit(['S','C','Q'])\n",
+    "features['Embarked'] = le2.transform(features['Embarked'])\n",
+    "features.dtypes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#OneHotEncoder should be used to handle categories\n",
+    "#But Right now we were drop this column to not work on OneHotEncoder\n",
+    "#from sklearn.preprocessing import OneHotEncoder\n",
+    "features = features.drop('Embarked',1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>3</td>\n",
-       "      <td>female</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.8958</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>722</th>\n",
-       "      <td>2</td>\n",
-       "      <td>male</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13.0000</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>678</th>\n",
-       "      <td>3</td>\n",
-       "      <td>female</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>46.9000</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>229</th>\n",
-       "      <td>3</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>25.4667</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>334</th>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>133.6500</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Pclass     Sex   Age  SibSp  Parch      Fare Embarked\n",
-       "100       3  female  28.0      0      0    7.8958        S\n",
-       "722       2    male  34.0      0      0   13.0000        S\n",
-       "678       3  female  43.0      1      6   46.9000        S\n",
-       "229       3  female   NaN      3      1   25.4667        S\n",
-       "334       1  female   NaN      1      0  133.6500        S"
+       "(     Pclass  Sex   Age  SibSp  Parch    Fare\n",
+       " 167       3    0  45.0      1      4  27.900\n",
+       " 579       3    1  32.0      0      0   7.925\n",
+       " 279       3    0  35.0      1      1  20.250\n",
+       " 728       2    1  25.0      1      0  26.000\n",
+       " 131       3    1  20.0      0      0   7.050, 167    0\n",
+       " 579    1\n",
+       " 279    1\n",
+       " 728    0\n",
+       " 131    0\n",
+       " Name: Survived, dtype: int64)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,8 +646,128 @@
     "#Separating Cross Validation Set\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "features_train, features_test, labels_train, y_test = train_test_split(features, labels, test_size=0.4, random_state=0)\n",
-    "features_train.head()"
+    "features_train, features_test, labels_train, labels_test = train_test_split(features, labels, test_size=0.4, random_state=0)\n",
+    "features_train.head(),labels_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.77894736842105261"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Logistic Regression Classifier\n",
+    "from sklearn import linear_model\n",
+    "logreg = linear_model.LogisticRegression()\n",
+    "logreg = logreg.fit(features_train,labels_train)\n",
+    "logreg.score(features_test,labels_test)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.74736842105263157"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Decision Tree Classifier\n",
+    "from sklearn import tree\n",
+    "dectree = tree.DecisionTreeClassifier()\n",
+    "dectree = dectree.fit(features_train,labels_train)\n",
+    "dectree.score(features_test,labels_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.61754385964912284"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Support Vector Machine Classifier\n",
+    "from sklearn import svm\n",
+    "svmclass = svm.SVC()\n",
+    "svmclass = svmclass.fit(features_train,labels_train)\n",
+    "svmclass.score(features_test,labels_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.66666666666666663"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Neural Network Classifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "clf = MLPClassifier(solver='lbfgs', alpha=1e-5,hidden_layer_sizes=(5, 2), random_state=1)\n",
+    "clf = clf.fit(features_train,labels_train)\n",
+    "clf.score(features_test,labels_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.743859649122807"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "gnb = GaussianNB()\n",
+    "gnb = gnb.fit(features_train,labels_train)\n",
+    "gnb.score(features_test,labels_test)"
    ]
   }
  ],
