--- a/titanic-problem.ipynb
+++ b/titanic-problem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -145,7 +145,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "4         0       3    male  35.0      0      0   8.0500   NaN        S"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
        "4         0       3    male  35.0      0      0   8.0500        S"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "4         0       3    male  35.0      0      0   8.0500        S"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "(712, 8)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        " Name: Survived, dtype: int64)"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,18 +652,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.77894736842105261"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.810304449649\n",
+      "0.778947368421\n"
+     ]
     }
    ],
    "source": [
@@ -671,24 +669,22 @@
     "from sklearn import linear_model\n",
     "logreg = linear_model.LogisticRegression()\n",
     "logreg = logreg.fit(features_train,labels_train)\n",
-    "logreg.score(features_test,labels_test)\n",
-    "\n"
+    "print logreg.score(features_train,labels_train)\n",
+    "print logreg.score(features_test,labels_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.74736842105263157"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.992974238876\n",
+      "0.764912280702\n"
+     ]
     }
    ],
    "source": [
@@ -696,23 +692,22 @@
     "from sklearn import tree\n",
     "dectree = tree.DecisionTreeClassifier()\n",
     "dectree = dectree.fit(features_train,labels_train)\n",
-    "dectree.score(features_test,labels_test)"
+    "print dectree.score(features_train,labels_train)\n",
+    "print dectree.score(features_test,labels_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.61754385964912284"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.918032786885\n",
+      "0.617543859649\n"
+     ]
     }
    ],
    "source": [
@@ -720,23 +715,22 @@
     "from sklearn import svm\n",
     "svmclass = svm.SVC()\n",
     "svmclass = svmclass.fit(features_train,labels_train)\n",
-    "svmclass.score(features_test,labels_test)"
+    "print svmclass.score(features_train,labels_train)\n",
+    "print svmclass.score(features_test,labels_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.66666666666666663"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.697892271663\n",
+      "0.666666666667\n"
+     ]
     }
    ],
    "source": [
@@ -744,31 +738,40 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "clf = MLPClassifier(solver='lbfgs', alpha=1e-5,hidden_layer_sizes=(5, 2), random_state=1)\n",
     "clf = clf.fit(features_train,labels_train)\n",
-    "clf.score(features_test,labels_test)"
+    "print clf.score(features_train,labels_train)\n",
+    "print clf.score(features_test,labels_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.743859649122807"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.793911007026\n",
+      "0.743859649123\n"
+     ]
     }
    ],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
     "gnb = GaussianNB()\n",
     "gnb = gnb.fit(features_train,labels_train)\n",
-    "gnb.score(features_test,labels_test)"
+    "print gnb.score(features_train,labels_train)\n",
+    "print gnb.score(features_test,labels_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
